--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    dataBinding{enabled = true;}
 }
 
 dependencies {
@@ -42,10 +43,14 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:21.0.3'
     implementation 'com.google.firebase:firebase-firestore:24.1.1'
     implementation 'com.google.firebase:firebase-storage:20.0.1'
+    //google play services
     implementation 'com.google.android.gms:play-services-maps:17.0.1'
+    implementation 'com.android.volley:volley:1.2.1'
+    implementation 'androidx.navigation:navigation-fragment:2.3.5'
 
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation 'com.karumi:dexter:6.2.2'
 }
