--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,8 @@ android {
 
 dependencies {
 
+    implementation 'com.google.android.material:material:1.2.0'
+
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
@@ -47,6 +49,11 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:17.0.1'
 
     implementation 'androidx.navigation:navigation-fragment:2.3.5'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+
+
+
+
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
