--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,12 +6,10 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.PERMISSION_NAME"/>
-    <!--Declaring the required permissions-->
+    <uses-permission android:name="android.permission.PERMISSION_NAME" /> <!-- Declaring the required permissions -->
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA" />
-
 
     <application
         android:allowBackup="true"
@@ -21,9 +19,22 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyAndroidApp2">
         <activity
+            android:name=".InterestsActivity"
+            android:exported="false"
+            android:parentActivityName=".AccountActivity" />
+        <activity
+            android:name=".FreeTimeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".findFriends"
+            android:exported="false"
+            android:parentActivityName=".Menu" />
+        <activity
+            android:name=".Menu"
+            android:exported="false" />
+        <activity
             android:name=".Dash"
             android:exported="false" />
-
         <activity
             android:name=".MapsActivity2"
             android:exported="false" />
