--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ plugins {
 }
 
 android {
+
     compileSdk 32
     dataBinding{
         enabled = true  //enable data binding
@@ -17,6 +18,7 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -33,29 +35,34 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
     dataBinding{enabled = true;}
+
+
+
 }
 
 dependencies {
 
-    implementation 'com.google.android.material:material:1.2.0'
-
+    implementation 'com.google.android.material:material:1.6.0'
+    implementation 'com.android.support:multidex:1.0.3'
     implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'com.google.android.material:material:1.6.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
-    implementation 'com.google.firebase:firebase-auth:21.0.3'
-    implementation 'com.google.firebase:firebase-firestore:24.1.1'
+    implementation 'com.firebaseui:firebase-ui:0.4.3'
+    implementation 'com.google.firebase:firebase-firestore:24.1.2'
     implementation 'com.google.firebase:firebase-storage:20.0.1'
-    //google play services
-    implementation 'com.google.android.gms:play-services-maps:17.0.1'
 
-    implementation 'androidx.navigation:navigation-fragment:2.3.5'
+
+    //google play services
+    implementation 'com.google.android.gms:play-services-maps:18.0.2'
+    implementation 'com.google.android.gms:play-services-location:19.0.1'
+    //implementation 'com.google.firebase:firebase-core:21.0.0'
+
+
+    implementation 'androidx.navigation:navigation-fragment:2.4.2'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
-
-
-
 
 
     testImplementation 'junit:junit:4.13.2'
@@ -63,4 +70,9 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.karumi:dexter:6.2.2'
     implementation'com.android.volley:volley:1.2.1'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+
+
+
 }
