--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:scaleType="centerInside"
+        android:adjustViewBounds="true"
         android:theme="@style/Theme.MyAndroidApp2">
         <activity
             android:name=".InterestsActivity"
