--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,14 +12,17 @@
     <uses-permission android:name="android.permission.CAMERA" />
 
     <application
+        android:adjustViewBounds="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
         android:scaleType="centerInside"
-        android:adjustViewBounds="true"
+        android:supportsRtl="true"
         android:theme="@style/Theme.MyAndroidApp2">
+        <activity
+            android:name=".LogIn"
+            android:exported="false" />
         <activity
             android:name=".InterestsActivity"
             android:exported="false"
@@ -35,13 +38,13 @@
             android:name=".Menu"
             android:exported="false" />
         <activity
-            android:name=".Dash"
+            android:name="fragments.Dash"
             android:exported="false" />
         <activity
-            android:name=".MapsActivity2"
+            android:name="maps.MapsActivity2"
             android:exported="false" />
         <activity
-            android:name=".MapsActivity"
+            android:name="maps.MapsActivity"
             android:exported="false" />
         <activity
             android:name=".TestIvan"
@@ -65,10 +68,7 @@
             android:value="AIzaSyARirpEOWJubRajZ07INjUlq1r5BBSvH6U" />
 
         <activity
-            android:name=".SignUpActivity"
-            android:exported="false" />
-        <activity
-            android:name=".LoginActivity"
+            android:name="basic.LoginActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
