--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,7 +42,8 @@
             android:exported="false" />
         <activity
             android:name="fragments.Dash"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".Menu"/>
         <activity
             android:name="maps.MapsActivity2"
             android:exported="false"
