--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:adjustViewBounds="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="FFF"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:scaleType="centerInside"
         android:supportsRtl="true"
